# Yanet-p2p-Encrypted-Virtual-Network

./: .gitignore  CMakeLists.txt  README.md  run_node_1_windows.bat  run_node_2_wsl.sh  scratch.cpp
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  yanet
docs/: PROTOCOL.md
include/yanet/: crypto.h  identity.h  packet.h  peer.h  transport.h  types.h  version.h
src/: main.cpp
src/core/: crypto.cpp  identity.cpp  packet.cpp  peer.cpp  transport.cpp
tests/: test_crypto.cpp  test_identity.cpp  test_packet.cpp
